[package]
name = "hypomux-diagnostic"
version = "1.0.0"
edition = "2021"
description = "HypoMux 网卡链路诊断内核 - 免管理员 ICMP 探测，按源 IP 强绑定发射"
authors = ["Hypostasis-Cat"]

# 产物名固定为 diagnostic.exe，供 Python 前端以相对路径调用
[[bin]]
name = "diagnostic"
path = "src/main.rs"

[profile.release]
opt-level = "z"      # 体积优先
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 零第三方依赖：JSON 手工拼接、参数手工解析、ICMP 走 Win32 IcmpSendEcho2Ex。
# 这样 cargo build 无需联网拉取 crate，且产物极小、启动极快。
[dependencies]
